@@ -19,6 +19,7 @@ if test -z "$ac_sysv_termio"; then
 fi
 fi
 AC_HEADER_TIME
+AC_CHECK_HEADERS(string.h)
 AC_CHECK_HEADERS(sys/time.h sys/tty.h)
 AC_HAVE_FUNCS(vhangup)
 AC_FUNC_CHECK(grantpt,AC_DEFINE(STREAMSPTY))
