@@ -1,3 +1,9 @@
+Tue Jun 20 14:25:01 1995  Tom Yu  (tlyu@dragons-lair)
+
+	* defs.h: NO_STRING_H -> HAVE_STRING_H
+
+	* configure.in: add test for string.h
+
 Thu Jun 15 17:43:21 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* Makefile.in - Change explicit library names to -l<lib> form, and
 		change target link line to use $(LD) and associated flags.
